--- a/Example 2: IMC dataset.ipynb
+++ b/Example 2: IMC dataset.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 1776974 × 38\n",
+       "AnnData object with n_obs \u00d7 n_vars = 1776974 \u00d7 38\n",
        "    obs: 'area', 'eccentricity', 'islet_id', 'centroid', 'image', 'case', 'slide', 'part', 'group', 'stage', 'cell_cat', 'cell_type'\n",
        "    var: 'markers'"
       ]
@@ -460,16 +460,16 @@
      "text": [
       "\u001b[32mRunning spatial distribution\u001b[39m\n",
       "\u001b[32mMethod: Nearest neighbors search\u001b[39m\n",
-      "\u001b[32mFinding distribution pattern: 100%|\u001b[36m██████████\u001b[32m| 10335/10335 [00:07<00:00, 1340.74task/s]\u001b[39m\n",
+      "\u001b[32mFinding distribution pattern: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 10335/10335 [00:07<00:00, 1340.74task/s]\u001b[39m\n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'spatial_distribution'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m30s316ms\u001b[39m\n",
       "\u001b[32mRunning spatial heterogeneity\u001b[39m\n",
       "\u001b[32mMethod: Leibovici entropy\u001b[39m\n",
-      "\u001b[32mCalculating heterogeneity: 100%|\u001b[36m██████████\u001b[32m| 845/845 [00:03<00:00, 221.81ROI/s]\u001b[39m \n",
+      "\u001b[32mCalculating heterogeneity: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [00:03<00:00, 221.81ROI/s]\u001b[39m \n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'spatial_heterogeneity'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m43s368ms\u001b[39m\n",
       "\u001b[32mRunning hotspot detection\u001b[39m\n",
-      "\u001b[32mHotspot analysis: 100%|\u001b[36m██████████\u001b[32m| 2290/2290 [00:01<00:00, 2039.28task/s]\u001b[39m\n",
+      "\u001b[32mHotspot analysis: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 2290/2290 [00:01<00:00, 2039.28task/s]\u001b[39m\n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'hotspot'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m9s783ms\u001b[39m\n"
      ]
@@ -498,10 +498,10 @@
      "text": [
       "\u001b[32mFinding cell neighbors\u001b[39m\n",
       "\u001b[32mCell resolved as point data, searching neighbors using KD-tree\u001b[39m\n",
-      "\u001b[32mFind neighbors: 100%|\u001b[36m██████████\u001b[32m| 845/845 [00:13<00:00, 61.21ROI/s]\u001b[39m\n",
+      "\u001b[32mFind neighbors: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [00:13<00:00, 61.21ROI/s]\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m15s738ms\u001b[39m\n",
       "\u001b[32mRunning neighborhood analysis\u001b[39m\n",
-      "\u001b[32mNeighborhood analysis: 100%|\u001b[36m██████████\u001b[32m| 845/845 [06:44<00:00,  2.09ROI/s]\u001b[39m\n",
+      "\u001b[32mNeighborhood analysis: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [06:44<00:00,  2.09ROI/s]\u001b[39m\n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'neighborhood_analysis'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m6m44s\u001b[39m\n"
      ]
@@ -536,7 +536,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32mRunning spatial enrichment analysis\u001b[39m\n",
-      "\u001b[32mSpatial enrichment analysis: 100%|\u001b[36m██████████\u001b[32m| 845/845 [35:02<00:00,  2.49s/ROI]\u001b[39m    \n",
+      "\u001b[32mSpatial enrichment analysis: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [35:02<00:00,  2.49s/ROI]\u001b[39m    \n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'spatial_enrichment_analysis'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m35m7s\u001b[39m\n"
      ]
@@ -565,7 +565,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[32mRunning community detection\u001b[39m\n",
-      "\u001b[32mCommunities detection: 100%|\u001b[36m██████████\u001b[32m| 845/845 [00:08<00:00, 97.24ROI/s]\u001b[39m \n",
+      "\u001b[32mCommunities detection: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [00:08<00:00, 97.24ROI/s]\u001b[39m \n",
       "\u001b[32mFinished! Used \u001b[36m38s714ms\u001b[39m\n"
      ]
     }
@@ -590,14 +590,14 @@
      "text": [
       "\u001b[32mFinding cell neighbors\u001b[39m\n",
       "\u001b[32mCell resolved as point data, searching neighbors using KD-tree\u001b[39m\n",
-      "\u001b[32mFind neighbors: 100%|\u001b[36m██████████\u001b[32m| 845/845 [00:11<00:00, 70.66ROI/s]\u001b[39m \n",
+      "\u001b[32mFind neighbors: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 845/845 [00:11<00:00, 70.66ROI/s]\u001b[39m \n",
       "\u001b[32mFinished! Used \u001b[36m13s770ms\u001b[39m\n",
       "\u001b[32mFinding marker expression influenced by neighbor cells\u001b[39m\n",
-      "\u001b[32mFitting model: 100%|\u001b[36m██████████\u001b[32m| 41/41 [05:17<00:00,  7.75s/regressor]\u001b[39m\n",
+      "\u001b[32mFitting model: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 41/41 [05:17<00:00,  7.75s/regressor]\u001b[39m\n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'exp_neighcell'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m5m37s\u001b[39m\n",
       "\u001b[32mFinding marker expression influenced by neighbor markers\u001b[39m\n",
-      "\u001b[32mFitting model: 100%|\u001b[36m██████████\u001b[32m| 4/4 [00:05<00:00,  1.44s/regressor]\u001b[39m\n",
+      "\u001b[32mFitting model: 100%|\u001b[36m\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u2588\u001b[32m| 4/4 [00:05<00:00,  1.44s/regressor]\u001b[39m\n",
       "\u001b[32mAdded to AnnData, uns: \u001b[36m'exp_neighexp'\u001b[39m\n",
       "\u001b[32mFinished! Used \u001b[36m9s875ms\u001b[39m\n"
      ]
@@ -673,7 +673,7 @@
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 1776974 × 38\n",
+       "AnnData object with n_obs \u00d7 n_vars = 1776974 \u00d7 38\n",
        "    obs: 'area', 'eccentricity', 'islet_id', 'centroid', 'image', 'case', 'slide', 'part', 'group', 'stage', 'cell_cat', 'cell_type', 'hotspot', 'communities'\n",
        "    var: 'markers'\n",
        "    uns: 'cell_components', 'cell_co_occurrence', 'cell_density', 'cell_morphology', 'spatial_distribution', 'spatial_heterogeneity', 'neighborhood_analysis', 'spatial_enrichment_analysis'\n",
@@ -1610,7 +1610,7 @@
        "                        <td id=\"T_a19b06ec_23d8_11eb_8bfe_3c7d0a055c48row4_col2\" class=\"data row4 col2\" >beta</td>\n",
        "                        <td id=\"T_a19b06ec_23d8_11eb_8bfe_3c7d0a055c48row4_col3\" class=\"data row4 col3\" >0.495457</td>\n",
        "            </tr>\n",
-       "    </tbody></table>   <style  type=\"text/css\" >\n",
+       "    </tbody></table>\u00a0\u00a0\u00a0<style  type=\"text/css\" >\n",
        "</style><table id=\"T_a19b3608_23d8_11eb_8bfe_3c7d0a055c48\" style='display:inline'><caption>Markers influenced by neighbors' marker</caption><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Cell_1</th>        <th class=\"col_heading level0 col1\" >Cell_1_Marker</th>        <th class=\"col_heading level0 col2\" >(Affected_by)Cell_2</th>        <th class=\"col_heading level0 col3\" >Cell_2_Marker</th>        <th class=\"col_heading level0 col4\" >Score</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
        "                        <th id=\"T_a19b3608_23d8_11eb_8bfe_3c7d0a055c48level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
@@ -1644,7 +1644,7 @@
        "                        <td id=\"T_a19b3608_23d8_11eb_8bfe_3c7d0a055c48row3_col3\" class=\"data row3 col3\" >SLC2A1</td>\n",
        "                        <td id=\"T_a19b3608_23d8_11eb_8bfe_3c7d0a055c48row3_col4\" class=\"data row3 col4\" >0.094957</td>\n",
        "            </tr>\n",
-       "    </tbody></table>   "
+       "    </tbody></table>\u00a0\u00a0\u00a0"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
