--- a/1-Basic usage.ipynb
+++ b/1-Basic usage.ipynb
@@ -423,7 +423,7 @@
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 1776974 × 38\n",
+       "AnnData object with n_obs \u00d7 n_vars = 1776974 \u00d7 38\n",
        "    obs: 'area', 'eccentricity', 'islet_id', 'centroid', 'image', 'case', 'slide', 'part', 'group', 'stage', 'cell_cat', 'cell_type'\n",
        "    var: 'markers'"
       ]
@@ -511,25 +511,25 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-style: italic\">          Current configurations of SpatialTis           </span>\n",
-       "┏━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\"> Options          </span>┃<span style=\"font-weight: bold\"> Value                              </span>┃\n",
-       "┡━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080\"> OS               </span>│<span style=\"color: #800080\"> Darwin                             </span>│\n",
-       "│<span style=\"color: #008080\"> MP               </span>│<span style=\"color: #800080\"> True                               </span>│\n",
-       "│<span style=\"color: #008080\"> WORKING_ENV      </span>│<span style=\"color: #800080\"> jupyter                            </span>│\n",
-       "│<span style=\"color: #008080\"> VERBOSE          </span>│<span style=\"color: #800080\"> True                               </span>│\n",
-       "│<span style=\"color: #008080\"> PBAR             </span>│<span style=\"color: #800080\"> True                               </span>│\n",
-       "│<span style=\"color: #008080\"> AUTO_SAVE        </span>│<span style=\"color: #800080\"> my_result_folder                   </span>│\n",
-       "│<span style=\"color: #008080\"> EXP_OBS          </span>│<span style=\"color: #800080\"> ['stage', 'case', 'part', 'image'] </span>│\n",
-       "│<span style=\"color: #008080\"> ROI_KEY          </span>│<span style=\"color: #800080\"> image                              </span>│\n",
-       "│<span style=\"color: #008080\"> CELL_TYPE_KEY    </span>│<span style=\"color: #800080\"> cell_type                          </span>│\n",
-       "│<span style=\"color: #008080\"> MARKER_KEY       </span>│<span style=\"color: #800080\"> markers                            </span>│\n",
-       "│<span style=\"color: #008080\"> NEIGHBORS_KEY    </span>│<span style=\"color: #800080\"> cell_neighbors                     </span>│\n",
-       "│<span style=\"color: #008080\"> CENTROID_KEY     </span>│<span style=\"color: #800080\"> centroid                           </span>│\n",
-       "│<span style=\"color: #008080\"> AREA_KEY         </span>│<span style=\"color: #800080\"> area                               </span>│\n",
-       "│<span style=\"color: #008080\"> SHAPE_KEY        </span>│<span style=\"color: #800080\"> cell_shape                         </span>│\n",
-       "│<span style=\"color: #008080\"> ECCENTRICITY_KEY </span>│<span style=\"color: #800080\"> eccentricity                       </span>│\n",
-       "└──────────────────┴────────────────────────────────────┘\n",
+       "\u250f\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2533\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2513\n",
+       "\u2503<span style=\"font-weight: bold\"> Options          </span>\u2503<span style=\"font-weight: bold\"> Value                              </span>\u2503\n",
+       "\u2521\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2547\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2529\n",
+       "\u2502<span style=\"color: #008080\"> OS               </span>\u2502<span style=\"color: #800080\"> Darwin                             </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> MP               </span>\u2502<span style=\"color: #800080\"> True                               </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> WORKING_ENV      </span>\u2502<span style=\"color: #800080\"> jupyter                            </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> VERBOSE          </span>\u2502<span style=\"color: #800080\"> True                               </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> PBAR             </span>\u2502<span style=\"color: #800080\"> True                               </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> AUTO_SAVE        </span>\u2502<span style=\"color: #800080\"> my_result_folder                   </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> EXP_OBS          </span>\u2502<span style=\"color: #800080\"> ['stage', 'case', 'part', 'image'] </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> ROI_KEY          </span>\u2502<span style=\"color: #800080\"> image                              </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> CELL_TYPE_KEY    </span>\u2502<span style=\"color: #800080\"> cell_type                          </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> MARKER_KEY       </span>\u2502<span style=\"color: #800080\"> markers                            </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> NEIGHBORS_KEY    </span>\u2502<span style=\"color: #800080\"> cell_neighbors                     </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> CENTROID_KEY     </span>\u2502<span style=\"color: #800080\"> centroid                           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> AREA_KEY         </span>\u2502<span style=\"color: #800080\"> area                               </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> SHAPE_KEY        </span>\u2502<span style=\"color: #800080\"> cell_shape                         </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> ECCENTRICITY_KEY </span>\u2502<span style=\"color: #800080\"> eccentricity                       </span>\u2502\n",
+       "\u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2534\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24259,7 +24259,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Components</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Components</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24272,7 +24272,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24285,7 +24285,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">462ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">462ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24341,7 +24341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-02-22T12:34:28.510539Z",
@@ -24368,7 +24368,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24402,7 +24402,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Components</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Components</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24415,7 +24415,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -24428,7 +24428,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">459ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">459ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
