--- a/2-Basic Analysis.ipynb
+++ b/2-Basic Analysis.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "AnnData object with n_obs × n_vars = 1776974 × 38\n",
+       "AnnData object with n_obs \u00d7 n_vars = 1776974 \u00d7 38\n",
        "    obs: 'area', 'eccentricity', 'islet_id', 'centroid', 'image', 'case', 'slide', 'part', 'group', 'stage', 'cell_cat', 'cell_type'\n",
        "    var: 'markers'"
       ]
@@ -408,7 +408,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Components</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Components</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -421,7 +421,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_components'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -434,7 +434,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">488ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">488ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-03T08:11:42.178638Z",
@@ -627,7 +627,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Density</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Density</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -640,7 +640,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_density'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'cell_density'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -653,7 +653,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">20s29ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">20s29ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -667,7 +667,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-03T08:14:14.223357Z",
@@ -705,7 +705,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Co-occurrence</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Co-occurrence</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -751,7 +751,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'co_occurrence'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'co_occurrence'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -764,7 +764,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">853ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">853ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -887,7 +887,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏳ <span style=\"color: #008000\">Cell Morphology</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f3 <span style=\"color: #008000\">Cell Morphology</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -900,7 +900,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">📦 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'morphology'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\ud83d\udce6 <span style=\"color: #008000\">Added to AnnData, uns: </span><span style=\"color: #008080; font-weight: bold\">'morphology'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -913,7 +913,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">⏱ <span style=\"color: #008080; font-weight: bold\">4s360ms</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\u23f1 <span style=\"color: #008080; font-weight: bold\">4s360ms</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": []
