--- a/6-Setting configurations.ipynb
+++ b/6-Setting configurations.ipynb
@@ -356,25 +356,25 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-style: italic\">Current configurations of SpatialTis </span>\n",
-       "┏━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━┓\n",
-       "┃<span style=\"font-weight: bold\"> Options          </span>┃<span style=\"font-weight: bold\"> Value          </span>┃\n",
-       "┡━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━┩\n",
-       "│<span style=\"color: #008080\"> OS               </span>│<span style=\"color: #800080\"> Darwin         </span>│\n",
-       "│<span style=\"color: #008080\"> MP               </span>│<span style=\"color: #800080\"> True           </span>│\n",
-       "│<span style=\"color: #008080\"> WORKING_ENV      </span>│<span style=\"color: #800080\"> jupyter        </span>│\n",
-       "│<span style=\"color: #008080\"> VERBOSE          </span>│<span style=\"color: #800080\"> True           </span>│\n",
-       "│<span style=\"color: #008080\"> PBAR             </span>│<span style=\"color: #800080\"> True           </span>│\n",
-       "│<span style=\"color: #008080\"> AUTO_SAVE        </span>│<span style=\"color: #800080\"> False          </span>│\n",
-       "│<span style=\"color: #008080\"> EXP_OBS          </span>│<span style=\"color: #800080\"> None           </span>│\n",
-       "│<span style=\"color: #008080\"> ROI_KEY          </span>│<span style=\"color: #800080\"> None           </span>│\n",
-       "│<span style=\"color: #008080\"> CELL_TYPE_KEY    </span>│<span style=\"color: #800080\"> None           </span>│\n",
-       "│<span style=\"color: #008080\"> MARKER_KEY       </span>│<span style=\"color: #800080\"> marker         </span>│\n",
-       "│<span style=\"color: #008080\"> NEIGHBORS_KEY    </span>│<span style=\"color: #800080\"> cell_neighbors </span>│\n",
-       "│<span style=\"color: #008080\"> CENTROID_KEY     </span>│<span style=\"color: #800080\"> centroid       </span>│\n",
-       "│<span style=\"color: #008080\"> AREA_KEY         </span>│<span style=\"color: #800080\"> area           </span>│\n",
-       "│<span style=\"color: #008080\"> SHAPE_KEY        </span>│<span style=\"color: #800080\"> cell_shape     </span>│\n",
-       "│<span style=\"color: #008080\"> ECCENTRICITY_KEY </span>│<span style=\"color: #800080\"> eccentricity   </span>│\n",
-       "└──────────────────┴────────────────┘\n",
+       "\u250f\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2533\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2513\n",
+       "\u2503<span style=\"font-weight: bold\"> Options          </span>\u2503<span style=\"font-weight: bold\"> Value          </span>\u2503\n",
+       "\u2521\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2547\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2501\u2529\n",
+       "\u2502<span style=\"color: #008080\"> OS               </span>\u2502<span style=\"color: #800080\"> Darwin         </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> MP               </span>\u2502<span style=\"color: #800080\"> True           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> WORKING_ENV      </span>\u2502<span style=\"color: #800080\"> jupyter        </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> VERBOSE          </span>\u2502<span style=\"color: #800080\"> True           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> PBAR             </span>\u2502<span style=\"color: #800080\"> True           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> AUTO_SAVE        </span>\u2502<span style=\"color: #800080\"> False          </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> EXP_OBS          </span>\u2502<span style=\"color: #800080\"> None           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> ROI_KEY          </span>\u2502<span style=\"color: #800080\"> None           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> CELL_TYPE_KEY    </span>\u2502<span style=\"color: #800080\"> None           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> MARKER_KEY       </span>\u2502<span style=\"color: #800080\"> marker         </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> NEIGHBORS_KEY    </span>\u2502<span style=\"color: #800080\"> cell_neighbors </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> CENTROID_KEY     </span>\u2502<span style=\"color: #800080\"> centroid       </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> AREA_KEY         </span>\u2502<span style=\"color: #800080\"> area           </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> SHAPE_KEY        </span>\u2502<span style=\"color: #800080\"> cell_shape     </span>\u2502\n",
+       "\u2502<span style=\"color: #008080\"> ECCENTRICITY_KEY </span>\u2502<span style=\"color: #800080\"> eccentricity   </span>\u2502\n",
+       "\u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2534\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\n",
        "</pre>\n"
       ],
       "text/plain": [
